dark mode variables fix

--- a/themes/hugo-clarity/assets/sass/_base.sass
+++ b/themes/hugo-clarity/assets/sass/_base.sass
@@ -97,7 +97,7 @@ aside
     margin: 0 !important
   ul
     list-style: none
-    color: rgba(0,81,255,0.760784)
+    color: rgba(31, 102, 255, 0.760784)
   li
     padding: 0.25rem 0
     text-decoration: underline
