--- a/themes/hugo-clarity/assets/sass/_components.sass
+++ b/themes/hugo-clarity/assets/sass/_components.sass
@@ -390,7 +390,7 @@
         // display: none
   &_profile_picture img
     margin-top: -15px
-    background-color: var(--light)
+    background-color: var(--post-bg)
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2)
 
 .pagination
