--- a/themes/hugo-clarity/assets/sass/_variables.sass
+++ b/themes/hugo-clarity/assets/sass/_variables.sass
@@ -63,8 +63,6 @@ html
     --table-border: var(--code-bg)
     --footer-bg: var(--bg)
     --post-bg: var(--translucent-light)
-    *
-      box-shadow: none !important
     
   
   &[data-mode="dim"]
